[init] refactored html

--- a/static/index.html
+++ b/static/index.html
@@ -7,8 +7,6 @@
   <title>Matthew's Awesome React Review</title>
 </head>
 <body>
-  <div>
-    Hello from HTML
-  </div>
+  <div>Hello from HTML</div>
 </body>
 </html>
